[package]
name = "ulid-rs-py"
version = "0.2.0"
description = "Use rust ulid crate to rewrite python ulid library"
authors = [
    "vvanglro <vvanglro@gmail.com>"
]
license = "MIT"
edition = "2021"
keywords = ["ulid"]

readme = "README.md"
homepage = "https://github.com/rp-libs/ulid-rs-py"
repository = "https://github.com/rp-libs/ulid-rs-py"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/build.rs",
    "/LICENSE",
    "/README.md",
    "/src",
    "/ulid",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!tests/.benchmarks",
    "!tests/benchmarks",
    "!*.so",
]

[lib]
name = "_ulid_rs_py"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.26"
pyo3 = { version = "=0.20.1", features = ["extension-module", "generate-import-lib"] }
ulid = { version = "1.0.0", features = ["uuid"] }
uuid = "1.4.1"

[build-dependencies]
pyo3-build-config = { version = "=0.20.1", features = ["resolve-config"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
